CM01_04/src/objects/RM_Milestone_History__c.object
<CustomObject>
    <fields>
        <fullName>RM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RM_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Milestone_No__c</fullName>
        <label>Milestone No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Milestone_Title__c</fullName>
        <label>Milestone Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Parent_Milestone__c</fullName>
        <label>Parent Milestone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Related_RFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Milestone History</label>
    <nameField>
        <displayFormat>Milestone-History-{0000000000}</displayFormat>
        <label>Milestone History No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>